harbor-on-ec2.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'An EC2 instance which gets harbor v1.5.2 installed and accessible on its public IP'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: Harbor EC2 instance type
    Type: String
    Default: t2.small
  AmiId:
    Description: Harbor EC2 AMI ID
    Type: String
    Default: ami-0e306788ff2473ccb
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: InstanceType
      SecurityGroups:
      - Ref: InstanceSecurityGroup
      KeyName:
        Ref: KeyName
      ImageId: 
        Ref: AmiId
      UserData:
        !Base64 |
        #!/bin/bash
        sudo yum update -y
        sudo yum -y install wget tar

        sudo yum install -y docker
        sudo service docker start
        sudo usermod -a -G docker ec2-user

        sudo curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
        sudo chmod +x /usr/local/bin/docker-compose
        sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose

        curl -LO https://storage.googleapis.com/harbor-releases/harbor-online-installer-v1.5.2.tgz
        tar -xvf harbor-online-installer-v1.5.2.tgz
        cd harbor

        commonName=`dig +short myip.opendns.com @resolver1.opendns.com`
        domainReplace="sed -i s/reg\.mydomain\.com/$commonName/g harbor.cfg"
        eval $domainReplace

        sudo ./install.sh
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp:
          Ref: SSHLocation
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value:
      Ref: EC2Instance
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value:
      Fn::GetAtt:
      - EC2Instance
      - PublicDnsName
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value:
      Fn::GetAtt:
      - EC2Instance
      - PublicIp
